log

Thu 14 Mar 2024 02:53:19 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
857e251
Thu 14 Mar 2024 02:57:27 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
07e5c54
Thu 14 Mar 2024 03:00:42 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cbd3941
Thu 14 Mar 2024 03:01:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:30:21: error: expected expression before ‘<’ token
   30 |   for(int i = 0; i =< size/2; i++)
      |                     ^
Compilation failed
6dcb9c2
Thu 14 Mar 2024 03:02:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c519b3a
Thu 14 Mar 2024 03:04:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cc5d17a
